update realtime service - ticket working

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /node_modules
 client/node_modules
 server/node_modules
+client/package-lock.json
+server/package-lock.json
 # IDEs and editors
 /.idea
 .project
