--- a/client/package.json
+++ b/client/package.json
@@ -22,14 +22,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@types/socket.io-client": "^1.4.29",
+    "@types/socket.io-client": "^1.4.32",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
-    "socket.io": "^2.0.3",
-    "socket.io-client": "^1.7.4",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
