--- a/server/package.json
+++ b/server/package.json
@@ -25,16 +25,19 @@
   },
   "homepage": "https://github.com/mskinho/lozeback/blob/master/README.md",
   "dependencies": {
+    "@types/express": "^4.16.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "common-js": "^0.3.8",
     "cors": "^2.8.3",
-    "express": "^4.15.3",
+    "express": "^4.16.3",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.7",
+    "morgan": "^1.9.0",
     "multer": "^1.3.1",
-    "socket.io": "^2.1.0",
+    "socket.io": "^1.4.6",
+    "source-map-support": "^0.5.9",
     "underscore": "^1.9.1"
   }
 }
