--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "2",
     "Application"
   ],
-  "author": "David Acosta",
+  "author": "Marcos Santana",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mskinho/lozeback/issues"
